tests/negative/symbols/fn_redef.orng
fn main() -> Int {
    let x = 0
    fn x()->(){}
    x
}